FIX: z-index was incorrect when the panel was under

--- a/assets/stylesheets/desktop/discourse-reactions.scss
+++ b/assets/stylesheets/desktop/discourse-reactions.scss
@@ -1,14 +1,2 @@
 .desktop-view {
-  .discourse-reactions-actions {
-    &:hover {
-      .double-button {
-        z-index: z("usercard") - 1;
-      }
-
-      .discourse-reactions-reaction-button,
-      .discourse-reactions-counter {
-        z-index: 2;
-      }
-    }
-  }
 }
